--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-pip install --upgrade pip
-python-3.9
 flask
 numpy
 keras
 pandas
-opencv
+opencv-python
 pyttsx3
 google.generativeai
 speech_recognotion
